--- a/media.html
+++ b/media.html
@@ -9,7 +9,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 
 	<h1>Partners &amp; Media</h1>
 
-	<h2>News</h2>
+	<h2 id="news">News</h2>
 	<div class="boxcontainer unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="images/florida.png" alt="test">
@@ -48,7 +48,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 
 
 <div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
-	<h2>Reports</h2>
+	<h2 id="reports">Reports</h2>
 	<div class="boxcontainer unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="images/map-puzzle.jpg" alt="test">
@@ -83,4 +83,12 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 			</a>
 		</figure>		
 	</div>		
+</div>
+
+<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
+	<h2 id="reports">Media</h2>
+</div>
+
+<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
+	<h2 id="reports">Woodland Magazine</h2>
 </div>
