--- a/media.html
+++ b/media.html
@@ -91,4 +91,38 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 
 <div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
 	<h2 id="reports">Woodland Magazine</h2>
+	<div class="boxcontainer unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+				<figcaption>A Youthful Attitude: The Many Benefits of Young Forests
+					<p>Young forests--the transitional stage between bare ground and mature forests--are often slighted as unsightly. But it turns out that these forests are vital to a variety of wild creatures. Learn more about the role young forests play and how you can create this crucial habitat on your property.</p>
+				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
+			</a>
+		</figure>		
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+				<figcaption>Henry Ford, Woodland Owner
+					<p>Everyone knows the story of Henry Ford as an automotive pioneer, but not as many people know that Ford also was a woodland owner.</p>
+				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
+			</a>
+		</figure>		
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+				<figcaption>Wild Boar: Not on the Menu
+					<p>Almost three decades after the 1986 nuclear accident at Chernobyl, fallout from that disaster is still affecting Germany’s forest-dwelling wild boar.</p>
+				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
+			</a>
+		</figure>		
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+				<figcaption>Bears in your Woods?
+					<p>As many as 1 million black bears inhabit this country, and they’re found in nearly every state—so if you own a woodland, you may have had an encounter with one of them. Learn how to minimize the chances of a dangerous encounter with bruins, and why many woodland owners welcome these animals on their property.</p>
+				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
+			</a>
+		</figure>		
+	</div>		
 </div>
